finished editing discussion

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -70,7 +70,7 @@ abstract <- "The amount of space organisms use is thought to be tightly linked t
 
 \noindent \textbf{Tables}: 0
 
-\noindent \textbf{References}: 141 <!-- counted by using nature csl -->
+\noindent \textbf{References}: 95 <!-- counted by using nature csl -->
 
 \noindent \textbf{Appendices}: 3
 
@@ -87,7 +87,7 @@ Michael J. Noonan: michael.noonan@ubc.ca
 # To do:
 
 * make sure appendices flow (added stuff from main text)
-* check number of references
+* check number of references (updated on 2024-03-18)
 
 \newpage
 
@@ -275,21 +275,16 @@ By quantifying the deviations from the simple theoretical models, one can then a
 
 \noindent In the absence of direct measurements of $R$, empirical models estimating the effects of $R$ on $H$ must depend on proxies of $R$, such as NDVI. However, using proxies of $R$ rather than direct measurements introduces sources of bias. While $R$ and NDVI are correlated [e.g., @phillips_evaluating_2008; @middleton_green-wave_2018; @seigle-ferrand_systematic_2021; @merkle_large_2016; @geremia_migrating_2019; @merkle_spatial_2019], the relationship between the two can be weak [@gautam_ndvi_2019] and nonlinear [@ref]. This is because remote-sensed proxies of $R$ and they do not measure resource availability directly, so they introduce two sources of bias: ecosystem-level biases (indicated as $Z$ in the DAG in figure C5) and satellite-level confounding variables ($S$ in figure C5).
 
-Examples of ecosystem-level biases are the effects of competition, predation, habitat connectivity, and movement costs, all of which can depend on habitat quality, and, consequently, be correlated nonlinearly to $R$ and $NDVI$ [@jetz_scaling_2004; @prox_framework_2020]. Resource-rich patches can attract larger amounts of competitors [@kacelnik_ideal_1992] and predators, which may increase pressures from competition [@ref] and predation [@brown_ecology_1999]. While such pressures may increase avoidance behaviors, the behaviors may result in both an expansion of the home range [@jetz_scaling_2004; @prox_framework_2020]
+Examples of ecosystem-level biases are the effects of competition, predation, habitat connectivity, and movement costs, all of which can depend on habitat quality, and, consequently, be correlated nonlinearly to $R$ and $NDVI$ [@jetz_scaling_2004; @prox_framework_2020]. Resource-rich patches can attract larger amounts of competitors [@kacelnik_ideal_1992] and predators, which may increase pressures from competition [@ref] and predation [@brown_ecology_1999]. While such pressures may increase avoidance behaviors, avoidance may have a cmplex effect on $H$, since it can result in both an expansion of the home range [@jetz_scaling_2004; @prox_framework_2020] or a contaction of an animal's movement, since larger home ranges can be harder to defend and also result in higher movement costs [@grant_whether_1993; @jetz_scaling_2004]. Additionally, persistent territorial defense from competitors may prevent organisms from using space freely and as necessary [theoretical framework: @despotic_ref; examples: @rich_anthropogenic_2012; @bengsen_feral_2016; @torrez-herrera_monkeys_2020].
 
-***here***
+Satellite-level confounds include information loss due to coarse spatiotemporal resolution [@ref], satellite-level error [@tian_evaluating_2015; @huang_commentary_2021; @fan_global_2016], and other limitations of remote sensing (e.g., inability to quantify specific resources, competitive pressure, and predator avoidance). However, nonlinear models such as Generalized Additive Models [@wood_generalized_2017] can help account for preferences for intermediate values of NDVI [e.g., young grass rather than mature grasslands, see @ref]. In the case study we present here, sampling limitations resulted in a strong nonlinear correlation between $\e(R)$ and $\var(R)$ that prevented us from estimating nonlinear preferences in mean NDVI (i.e., the proxy for $\e(R)$), since estimating the divers of movement and disentangling them from potential confounds in a stochastic environemtn is often complex or impossible [e.g., @wang_stochastic_2019]. A tracking time series of two or more years or additional individuals would have provided better estimates, but that was beyond the scope of this empirical example. 
 
-, but larger home ranges can be harder to defend and also result in higher rates of competition and movement costs [@grant_whether_1993; @jetz_scaling_2004; but also see @dickie_resource_2022]. Additionally, persistent territorial defense from competitors may prevent organisms from using space freely and as necessary [wolves, *Canis lupus*: @rich_anthropogenic_2012; feral cats, *Felis catus*: @bengsen_feral_2016; Capuchin monkeys, *Cebus capucinus*: @torrez-herrera_monkeys_2020], so the effect of $\e(R)$ on space use may vary between individuals, species, and locations. Still, these pressures simply alter the intensity with which organisms respond to $\e(R)$ but not the shape of the relationship, since each of these cases fall along different parts of the continuum in $\e(R)$ shown in fig. \@ref(fig:mu-hyp).
+**here:** need a few lines to tie this back to the general
 
+<!-- Feel free to delete this: -->
+<!-- While the tracking period may be too short to see the effects of $\e(R)$ clearly, it should also be noted that the Cerrado is relatively rich in vegetation throughout the entire year (fig. \@ref(fig:tapir-mw)A), and thus the tapir does not experience resource scarcity during the tracking period. Consequently, this example demonstrates two points central to this paper. Firstly, even animals in resource-rich regions such as the Brazilian Cerrado adapt their behavior in response to reosurce stochasticity. Secondly, trends in mean resources alone are not sufficient to explain the tapir's space use, and the stochasticity in $R$ is an important driver of the tapir's movement. -->
 
-Due to data limitations, disentangling the effects of such confounds is often complex or impossible [e.g., @wang_stochastic_2019].
-
-
-
-Satellite-level confounds include coarse spatiotemporal resolution [and the consequent aggregation of signals, see @ref], satellite-level error [@tian_evaluating_2015; @huang_commentary_2021; @fan_global_2016], and other limitations of remote sensing, including the inability to quantify the abundance of specific resources, whether these be preferred forage or the distribution of prey. In the case of preferences for intermediate values of NDVI [e.g., young grass rather than mature grasslands, see @], nonlinear models such as Generalized Additive Models can help account for a nonmonotonic relationship between $H$ and $E(NDVI)$, as long as data are sufficiently abundant to avoid any artifacts due to data paucity. In the case study we present here, sampling limitations resulted in a strong nonlinear correlation between $\e(R)$ and $\var(R)$, which prevented us from estimating any nonlinear preferences in mean NDVI (i.e., the proxy for $\e(R)$). A tracking time series of two or more years or additional individuals would have provided better estimates, but that was beyond the scope of this paper.
-
-Modeling the tapir's space use as a function of resource abundance alone would result in an excessively strong estimated effect and a quantifiably worse model fit ($\Delta\text{AIC} \approx 87$, see Appendix C). By including the effect of $\sigma^2(t)$ in the model along with that of $\mu(t)$, we show that the tapir responds to both resource abundance and stochasticity. While the tracking period may be too short to see the effects of $\e(R)$ clearly, it should also be noted that the Cerrado is relatively rich in vegetation throughout the entire year (fig. \@ref(fig:tapir-mw)A), and thus the tapir does not experience resource scarcity during the tracking period. Consequently, this example demonstrates two points central to this paper. Firstly, even animals in resource-rich regions such as the Brazilian Cerrado adapt their behavior in response to reosurce stochasticity. Secondly, trends in mean resources alone are not sufficient to explain the tapir's space use, and the stochasticity in $R$ is an important driver of the tapir's movement.
-
+<!-- 
 ## Adaptations to changes in $\e(R)$ and $\var(R)$
 
 Paragraphs to tie in:
@@ -297,13 +292,13 @@ Paragraphs to tie in:
 * @rizzuto_forage_2021 found that the space-use requirements of snowshoe hares (*Lepus americanus*) increased with average carbon to nitrogen ratio (C:N, a measure of N scarcity) in lowbush blueberry as well as the coefficient of variation (the standard deviation divided by the mean, $\frac{\sqrt{\sigma^2(t)}}{\mu(t)}$) in C:N. However, it is hard to determine how $\sigma^2(t)$ affected the hares' space-use requirements since the coefficient of variation is a function of both $\mu(t)$ and $\sigma^2(t)$, so the effects of the two variables are confounded. Similarly, @mueller_how_2011 suggested that ecosystem variability (measured as spatial semivariance in NDVI) causes ungulates to move more and adopt more nomadic behaviors, but it is hard to determine whether the higher semivariances in NDVI are due to an increase in $\var(R)$ or simply spatial changes in $\e(R)$ (e.g., increased seasonality or continentality). Likewise, @herfindal_prey_2005 found that the home ranges of Canadian lynx (*Lynx canadensis*) decreased with seasonality, but this may be an artifact of a lower $\mu(t)$ in highly seasonal environments, rather than stochasticity in $R$. A subsequent analysis by @nilsen_can_2005 of the lynx data of @herfindal_prey_2005 along with data on wolverines (*Gulo gulo*), bobcats (*Lynx rufus*), and coyotes (*Canis latrans*) found that carnivores respond differently to seasonality, which suggests that different species may have different perceptions of the changes in $R$ over the seasons. Collectively, these studies provide support towards the effects of both $\e(R)$ and $\var(R)$ on organisms' space-use requirements, but the lack of a unifying framework across these studies makes it challenging to synthesize their findings. Thus, it is important to disentangle the effects of changes in $\e(R)$, such as seasonal trends in $\mu(t)$, and stochasticity ($\var(R)$). The need to account for changes in both $\e(R)$ and $\var(R)$ is compounded by recent changes in climate, which expose species to novel situations and increasingly common and extreme stochastic events [@intergovernmental_panel_on_climate_change_climate_2023; @noonan_situ_2018; @yao_emergence_2022].
 * @nilsen_can_2005 also show that the effect of $\e(R)$ on the home-range size of wolves and fishers (*Martes pennanti*) depends on seasonality (and vice-versa), since organisms in habitats with high and low seasonality had opposite responses to $\e(R)$. Therefore, it may not be sufficient to account for the effects of $\e(R)$ and $\var(R)$; models may also need a term for interaction between the two. This may be because organisms respond strongly to $\sigma^2(t)$ when $\mu(t)$ is low, but they may not respond if $\mu(t)$ is sufficiently high. However, it does not explain why organisms may respond to $\e(R)$ in opposite ways in different habitats. Instead, we suspect this inconsistency is because @nilsen_can_2005 do not distinguish between changes in $\mu(t)$ and $\sigma^2(t)$ between seasons, so the effects of the two are confounded in the seasonality term. Distinguishing between changes in $\e(R)$ and $\var(R)$ allows one to separate the two seasonal cycles and produce more consistent results.
 
-<!-- spores are also an adaptation to periods of low $\e(R)$ or high $\var(R)$ -->
+The spatiotemporal scale over which an event occurs is a main determinant of whether an organism will be able to predict the event and how it will respond to it (or fail to do so). Events that occur at the scale of the organism [i.e. approximately one or more times per generation and on the spatial scale of the organism's spatial range, see @frankham_importance_2004] are more likely to be perceived as a threat or boon worth preparing for [@foley_severe_2008; @berger_climate_2018; @geremia_migrating_2019]. Consequently, organisms with long generations (e.g., elephants, *Loxodonta sp.*) or large spatial ranges (e.g., migratory birds) are more likely to experience stochastic events and thus are also more likely to respond to and prepare for them. Animals may adapt by adjusting the timing of reproduction [@southwood_habitat_1977; @boersma_wildfire_2021] and torpor or hibernation [@inouye_climate_2000; @goldberg_hibernation_2021], or storing large amounts of energy [@lindstedt_seasonality_1985] through fat storage [@armitage_energetics_2003; @nespolo_why_2022] or resource caching [@post_caching_2006]. Alternatively, animals may alter their movement and travel long distances over short periods of time [@jetz_scaling_2004; @hirt_general_2017], whether this be for migration [@geremia_migrating_2019; @mueller_social_2013] or nomadism [@teitelbaum_how_2015; @teitelbaum_beyond_2019; @nandintsetseg_variability_2019]. Over the years, animals may also develop more complex cognitive abilities [@brown_toward_2004], including the development of memory [@fagan_spatial_2013; @riotte-lambert_environmental_2020; @steixner-kumar_strategies_2020; @geremia_migrating_2019; @abrahms_memory_2019; @cavedon_genomic_2022; @foley_severe_2008; @polansky_elucidating_2015; @falcon-cortes_hierarchical_2021; @rickbeil_plasticity_2019; @ranc_memory_2022], which is required for migration [@mueller_social_2013; @geremia_migrating_2019; @merkle_spatial_2019; @abrahms_memory_2019; @rickbeil_plasticity_2019; @middleton_green-wave_2018; but see: @cuadrado_assessing_2021; @stefanescu_timing_2021].
+-->
 
-\noindent The spatiotemporal scale over which an event occurs is a main determinant of whether an organism will be able to predict the event and how it will respond to it (or fail to do so). Events that occur at the scale of the organism [i.e. approximately one or more times per generation and on the spatial scale of the organism's spatial range, see @frankham_importance_2004] are more likely to be perceived as a threat or boon worth preparing for [@foley_severe_2008; @berger_climate_2018; @geremia_migrating_2019]. Consequently, organisms with long generations (e.g., elephants, *Loxodonta sp.*) or large spatial ranges (e.g., migratory birds) are more likely to experience stochastic events and thus are also more likely to respond to and prepare for them. Animals may adapt by adjusting the timing of reproduction [@southwood_habitat_1977; @boersma_wildfire_2021] and torpor or hibernation [@inouye_climate_2000; @goldberg_hibernation_2021], or storing large amounts of energy [@lindstedt_seasonality_1985] through fat storage [@armitage_energetics_2003; @nespolo_why_2022] or resource caching [@post_caching_2006]. Alternatively, animals may alter their movement and travel long distances over short periods of time [@jetz_scaling_2004; @hirt_general_2017], whether this be for migration [@geremia_migrating_2019; @mueller_social_2013] or nomadism [@teitelbaum_how_2015; @teitelbaum_beyond_2019; @nandintsetseg_variability_2019]. Over the years, animals may also develop more complex cognitive abilities [@brown_toward_2004], including the development of memory [@fagan_spatial_2013; @riotte-lambert_environmental_2020; @steixner-kumar_strategies_2020; @geremia_migrating_2019; @abrahms_memory_2019; @cavedon_genomic_2022; @foley_severe_2008; @polansky_elucidating_2015; @falcon-cortes_hierarchical_2021; @rickbeil_plasticity_2019; @ranc_memory_2022], which is required for migration [@mueller_social_2013; @geremia_migrating_2019; @merkle_spatial_2019; @abrahms_memory_2019; @rickbeil_plasticity_2019; @middleton_green-wave_2018; but see: @cuadrado_assessing_2021; @stefanescu_timing_2021].
 <!-- 
 with species names:
 Organisms may adapt by adjusting the timing of reproduction [framework: @southwood_habitat_1977; red-backed fairywren, *Malurus melanocephalus*: @boersma_wildfire_2021] and torpor or hibernation [marmots, *Marmota flaviventris*: @inouye_climate_2000; ground squirrels, *Urocitellus brunneus*: @goldberg_hibernation_2021], storing large amounts of energy [@lindstedt_seasonality_1985] through fat storage [marmots: @armitage_energetics_2003; bears, *Ursus sp.*: @nespolo_why_2022] or resource caching [@post_caching_2006]. Alternatively, animals may alter their movement and travel long distances over short periods of time [@jetz_scaling_2004; @hirt_general_2017], whether this be for migration [@geremia_migrating_2019; @mueller_social_2013] or nomadism [@teitelbaum_how_2015; @teitelbaum_beyond_2019; @nandintsetseg_variability_2019]. Over the years, animals may also develop more complex cognitive abilities [@brown_toward_2004], including the development of memory of events [framework: @fagan_spatial_2013; @riotte-lambert_environmental_2020; @steixner-kumar_strategies_2020; bison and mule deer: @geremia_migrating_2019; blue whales, *Balaenoptera musculus*: @abrahms_memory_2019; caribou, *Rangifer tarandus*: @cavedon_genomic_2022; elephants: @foley_severe_2008; @polansky_elucidating_2015; elk, *Cervus canadensis*: @falcon-cortes_hierarchical_2021; @rickbeil_plasticity_2019; roe deer, *Capreolus capreolus*: @ranc_memory_2022], which is required for migration [whooping cranes, *Grus americana*: @mueller_social_2013; bison and mule deer: @geremia_migrating_2019; mule deer: @merkle_spatial_2019; blue whales: @abrahms_memory_2019; elk: @rickbeil_plasticity_2019; @middleton_green-wave_2018; but see: @cuadrado_assessing_2021; @stefanescu_timing_2021].-->
-However, adapting to changes in environmental cues rather than relying on memory alone [@severson_spring_2021; @rickbeil_plasticity_2019; @buntgen_elevational_2017; @jonzen_rapid_2006], can prevent animals from becoming trapped in sub-optimal conditions [@abrahms_memory_2019].
+<!-- However, adapting to changes in environmental cues rather than relying on memory alone [@severson_spring_2021; @rickbeil_plasticity_2019; @buntgen_elevational_2017; @jonzen_rapid_2006], can prevent animals from becoming trapped in sub-optimal conditions [@abrahms_memory_2019].
 
 In contrast, individuals with short lifespans are less likely to experience stochastic events and develop memory about them. However, the short generation time and high reproductive rate of r-selected species [as opposed to k-selected species, see @pianka_r-_1970; @brown_toward_2004] may promote other traits that increase survival following extreme events. Examples include higher population size, dispersal, higher genetic diversity, and complex group dynamics [e.g., @cuadrado_assessing_2021; @stefanescu_timing_2021]. Events that occur over large spatiotemporal scales can thus promote slow, large-scale changes through the adaptation, natural selection, and evolution of the species [@grant_evolution_2017; @logares_black_2012; @anderson_black-swan_2017; @gienapp_climate_2008], which is more likely to adapt if starting populations are large with high genetic diversity and short generations, as in the case of r-selected species [but see @leung_smaller_2022]. Of course, an organism with a lifespan shorter than a year will be unable to experience the cyclical nature of the seasons, and an organism with a lifespan of a few weeks or days may not even experience substantial changes in weather other than daily cycles and some weather stochasticity. Still, a population may respond to spatiotemporal cycles in $\e(R)$ and $\var(R)$ by adapting the group's reproduction timing and migration [e.g., painted lady butterflies: @cuadrado_assessing_2021; @stefanescu_timing_2021].
 
@@ -321,7 +316,9 @@ A population's fitness and chances of survival in a changing environment depend 
 
 # Conclusion
 
-\noindent The work presented here provides a unifying framework for viewing movement as a function of resource abundance and stochasticity. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on organisms' space-use requirements and movement behavior. We demonstrate that organisms' space-use requirements respond nonlinearly to both resource abundance and stochasticity, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a moving window approach that allows one to model movement continuously rather than imposing arbitrary thresholds between different periods or types of behaviors, including temporal changes in space-use requirements and shifts between range-residency and nomadism. The methods presented here can be applied to assess the current and future quality of protected areas while also estimating the amount of space organisms currently need and will need in the future under different climate change scenarios.
+**needs a few more lines at the end**
+
+\noindent The work presented here provides a unifying framework for viewing movement as a response to resource abundance and stochasticity. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on organisms' space-use requirements and movement behavior. We demonstrate that organisms' space-use requirements respond nonlinearly to both resource abundance and stochasticity, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a moving-window approach that allows one to model movement continuously rather than imposing arbitrary thresholds between different periods or types of behaviors, including temporal changes in space-use requirements and shifts between range-residency and nomadism. The methods presented here can be applied to assess both current and future quality of protected areas while also estimating the amount of space organisms currently need and will need in the future under different climate change scenarios.
 
 <!--
 # Acknowledgements
